# marimo-test-profiling

./: .gitignore  README.md  build.py  fetch.py  notebook.py  pyproject.toml
data/: per_test.parquet  runs.parquet  tests.parquet
widgets/: treemap.js
